src/style.scss
// Copyright (c) 2020 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

// Import Auro tokens
@import "./../node_modules/@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
@import "./../node_modules/@aurodesignsystem/webcorestylesheets/src/core";

// Support for auroElement styles
@import "./../node_modules/@aurodesignsystem/webcorestylesheets/dist/auroElement/auroElement";

@import "./../node_modules/@alaskaairux/icons/dist/icons";

/* stylelint-disable value-keyword-case, order/properties-order */

:host {
  color: currentColor;
  vertical-align: middle;
  line-height: 1;
  display: inline-block;

  .logo {
    color: var(--ds-color-brand-midnight-400, $ds-color-brand-midnight-400);
  }
}

svg {
  min-width: var(--ds-auro-icon-size, $ds-size-300) !important; // stylelint-disable-line declaration-no-important
  width: var(--ds-auro-icon-size, $ds-size-300) !important; // stylelint-disable-line declaration-no-important
  height: var(--ds-auro-icon-size, $ds-size-300) !important; // stylelint-disable-line declaration-no-important
}

.label {
  display: flex;
  align-items: flex-start;

  svg {
    margin: 0 var(--ds-size-50, $ds-size-50);
  }
}

.wrapper {
  height: var(--ds-auro-icon-size);
  width: var(--ds-auro-icon-size);
}

.labelContainer {
  line-height: 1.8;
}

